--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "files.associations": {
+        "gpio.h": "c",
+        "task.h": "c",
+        "esp_common.h": "c",
+        "queue.h": "c",
+        "esp_system.h": "c"
+    }
 }
