--- a/platformio.ini
+++ b/platformio.ini
@@ -10,5 +10,13 @@
 
 [env:esp_wroom_02]
 platform = espressif8266
-board = esp_wroom_02
+board = d1_mini
+framework = esp8266-rtos-sdk
+monitor_speed = 74480
+
+build_flags = -DDEBUG_ESP_PORT=Serial
+
+[env:test]
+platform = espressif8266
+board = d1_mini
 framework = esp8266-rtos-sdk
