--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,10 @@ platform = espressif8266
 board = d1_mini
 framework = esp8266-rtos-sdk
 monitor_speed = 74480
-board_build.f_flash = 80000000L
-
-; monitor_flags =
-;     --encoding
-;     hexlify
-
 
 build_flags = -DDEBUG_ESP_PORT=Serial
+
+[env:test]
+platform = espressif8266
+board = d1_mini
+framework = esp8266-rtos-sdk
